Updates to replace legacy doc client£