@@ -2,26 +2,26 @@ package uk.gov.hmcts.reform.bailcaseapi.util;
 
 import com.google.common.io.ByteStreams;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import uk.gov.hmcts.reform.document.DocumentUploadClientApi;
-import uk.gov.hmcts.reform.document.domain.UploadResponse;
-import uk.gov.hmcts.reform.document.utils.InMemoryMultipartFile;
+import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
+import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
+import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.bailcaseapi.domain.entities.ccd.field.Document;
 
 @Service
 public class SystemDocumentManagementUploader {
 
-    private final DocumentUploadClientApi documentUploadClientApi;
+    private final CaseDocumentClient caseDocumentClient;
     private final AuthorizationHeadersProvider authorizationHeadersProvider;
 
     public SystemDocumentManagementUploader(
-        DocumentUploadClientApi documentUploadClientApi,
+        CaseDocumentClient caseDocumentClient,
         AuthorizationHeadersProvider authorizationHeadersProvider
     ) {
-        this.documentUploadClientApi = documentUploadClientApi;
+        this.caseDocumentClient = caseDocumentClient;
         this.authorizationHeadersProvider = authorizationHeadersProvider;
     }
 
@@ -49,19 +49,19 @@ public class SystemDocumentManagementUploader {
                 contentType,
                 ByteStreams.toByteArray(resource.getInputStream())
             );
-
             UploadResponse uploadResponse =
-                documentUploadClientApi
-                    .upload(
+                caseDocumentClient
+                    .uploadDocuments(
                         accessToken,
                         serviceAuthorizationToken,
-                        userId,
-                        Collections.singletonList(file)
+                        "Bail",
+                        "IA",
+                        List.of(file)
                     );
 
-            uk.gov.hmcts.reform.document.domain.Document uploadedDocument =
+
+            uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument =
                 uploadResponse
-                    .getEmbedded()
                     .getDocuments()
                     .get(0);
 
